Add github action build